Fix layout bug

--- a/public/style/_containers.scss
+++ b/public/style/_containers.scss
@@ -31,7 +31,7 @@
 .fixed-right {
   top: 0;
   padding-top: 136px;
-  height: calc(100vh - 40px);
+  height: 100vh;
   position: fixed;
   right: 20px;
   overflow-y: auto;
